--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </footer> -->
 
 
-        <script src="js/index.js"></script>
+        <!-- <script src="js/index.js"></script> -->
 
     </body>
 </html>
