Update jpg to JPG, not recognized by hostinger

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 <h4 style="font-weight:600;">solo project of richmond-based singer, songwriter, & producer miranda elliott</h4>
             </div>
             <div style="grid-row: 1/span 2;grid-column: 4/span 2; z-index:1;">
-                <img src="img/creek-portrait.jpg" alt="" style="max-width: 500px; opacity: 85%;">
+                <img src="img/creek-portrait.JPG" alt="" style="max-width: 500px; opacity: 85%;">
             </div>
             <div style="grid-row: 2/span 2;grid-column: 1/span 2; z-index:1;">
-                <img src="img/mountain-rain.jpg" alt="" style="max-height: 700px; opacity: 80%;">
+                <img src="img/mountain-rain.JPG" alt="" style="max-height: 700px; opacity: 80%;">
             </div>
             <div style="grid-row: 3/span 2; grid-column: 2/span 3;z-index:2;align-self:center;">
                 wrapped in a warm fog, yearning vocals float through waves of synth and heartbeats of bass, conjuring a world equally intimate and organic.
@@ -92,7 +92,7 @@
                 when miranda grew up, she wanted to be a tree. the only child of a landscape painter, the forest felt like kin. on a steamy summer afternoon at her dad’s blue ridge cabin, she met the old man of the woods.
             </div>
             <div style="grid-row: 5/span 2;grid-column: 4/span 2; z-index:1;align-self:start;justify-self:center;">
-                <img src="img/moss.jpg" alt="" style="max-width: 400px; opacity: 70%;">
+                <img src="img/moss.JPG" alt="" style="max-width: 400px; opacity: 70%;">
             </div>
             <div style="grid-row: 5; grid-column: 4/span 2;z-index:2;align-self:end;">
                 for half a decade, miranda had been hoarding dark, introspective songs. that synthesis was mirrored in the mushroom before her - that alchemy of shit into sustenance. under the old man’s guise, she was free to unfurl.
