--- a/index.html
+++ b/index.html
@@ -73,35 +73,31 @@
         </section>
 
         <section class="bio">
-            <!-- <div style="grid-row: 1; grid-column: 1/span 2;">
-
-            </div> -->
             <div style="grid-row: 1;grid-column: 3/span 3; z-index:3;">
-                <h4 style="font-weight:600;">solo project of richmond-based singer, songwriter, & producer miranda elliott</h4>
+                <h4 style="font-weight:900!important;">solo project of richmond-based singer, songwriter, & producer miranda elliott</h4>
             </div>
             <!--max-width: 500px;-->
-            <div style="grid-row: 1/span 2;grid-column: 4/span 2; z-index:1;">
+            <div style="grid-row:1/span 2;grid-column:4/span 2;z-index:1;">
                 <img src="img/creek-portrait.JPG" alt="" style="opacity: 85%;">
             </div>
             <!--max-width: 700px;-->
-            <div style="grid-row: 2/span 2;grid-column: 1/span 2; z-index:1;">
+            <div style="grid-row:2/span 2;grid-column:1/span 2;z-index:1;">
                 <img src="img/mountain-rain.JPG" alt="" style="opacity: 80%;">
             </div>
-            <div style="grid-row: 3/span 2; grid-column: 2/span 3;z-index:2;align-self:start;">
+            <div style="grid-row:3/span 2;grid-column:2/span 3;z-index:2;align-self:start;">
                 wrapped in a warm fog, yearning vocals float through waves of synth and heartbeats of bass, conjuring a world equally intimate and organic.
             </div>
-            <div style="grid-row: 5; grid-column: 1/span 2;align-self:end;font-size:16px;">
+            <div style="grid-row:5;grid-column:1/span 2;font-size:16px;align-self:start;">
                 when miranda grew up, she wanted to be a tree. the only child of a landscape painter, the forest felt like kin. on a steamy summer afternoon at her dad’s blue ridge cabin, she met the old man of the woods.
             </div>
-            <div style="grid-row: 5; grid-column: 3/span 3;z-index:2;align-self:center;">
+            <div style="grid-row:5;grid-column:3/span 3;z-index:2;text-align:right;align-self:end;">
                 for half a decade, miranda had been hoarding dark, introspective songs. that synthesis was mirrored in the mushroom before her - that alchemy of shit into sustenance. under the old man’s guise, she was free to unfurl.
             </div>
             <!--max-width: 400px;-->
-            <div style="grid-row: 5/span 2;grid-column: 4/span 2; z-index:1;justify-self:start;">
+            <div style="grid-row:5/span 2;grid-column:4/span 2;z-index:1;justify-self:start;">
                 <img src="img/moss.JPG" alt="" style="max-width: 80%; opacity: 70%;">
             </div>
-
-            <div style="grid-row: 6; grid-column: 1/span 5;z-index:2;align-self:end;">
+            <div style="grid-row:6;grid-column:1/span 5;z-index:2;align-self:end;">
                 dissolve is old man of the woods’ debut ep, made in miranda’s bedroom during a month of winter rain and bad bout of bronchitis. everything clouded and waterlogged, the boundary between environment and self began to fade. she found comfort in letting herself dissolve, and hopes you will too.
             </div>
         </section>
