--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div style="grid-row:5/span 2;grid-column:4/span 2;z-index:1;justify-self:start;">
                 <img src="img/moss.JPG" alt="" style="max-width: 80%; opacity: 70%;">
             </div>
-            <div style="grid-row:6;grid-column:1/span 5;z-index:2;align-self:end;">
+            <div style="grid-row:6;grid-column:1/span 5;z-index:2;align-self:end;font-size:14px;">
                 dissolve is old man of the woods’ debut ep, made in miranda’s bedroom during a month of winter rain and bad bout of bronchitis. everything clouded and waterlogged, the boundary between environment and self began to fade. she found comfort in letting herself dissolve, and hopes you will too.
             </div>
         </section>
