--- a/index.html
+++ b/index.html
@@ -66,42 +66,52 @@
                 </li>
 
             </ul>
-            <div class="pulse">
-                <img src="img/mushroom-icon.svg" alt="" id="title-icon">
+            <div class="title-container">
+                <div class="pulse">
+                    <img src="img/mushroom-icon.svg" alt="" class="title-icon">
+                </div>
+                <h3 class="title-text">old man of the woods</h3>
             </div>
-            <h3 id="title-text">old man of the woods</h3>
         </section>
 
         <section class="bio">
-            <!-- style="grid-row: 1;grid-column: 3/span 3; z-index:3;" -->
             <div id="bioitem1">
                 <h4 style="font-weight:900!important;">solo project of richmond-based singer, songwriter, & producer miranda elliott</h4>
             </div>
-            <!-- style="grid-row:1/span 2;grid-column:4/span 2;z-index:1;" -->
-            <div id="bioitem2">
-                <img src="img/creek-portrait.JPG" alt="" style="opacity: 85%;">
+            <div id="bioitem2" class="content">
+                <!-- <img src="img/creek-portrait.JPG" alt="" style="opacity: 85%;"> -->
+
+                <div class="content-overlay"></div>
+                <img class="content-image" src="img/creek-portrait.JPG" alt=""/>
+                <div class="content-details"></div>
             </div>
-            <!-- style="grid-row:2/span 2;grid-column:1/span 2;z-index:1;" -->
-            <div id="bioitem3">
-                <img src="img/mountain-rain.JPG" alt="" style="opacity: 80%;">
+
+            <div id="bioitem3" class="content">
+                <!-- <img src="img/mountain-rain.JPG" alt="" style="opacity: 80%;">
+                <div class="img-hover-overlay">
+                    <img src="img/glitter.gif" alt="" class="sparkle">
+                </div> -->
+
+                <div class="content-overlay"></div>
+                <img class="content-image" src="img/mountain-rain.JPG" alt=""/>
+                <div class="content-details"></div>
             </div>
-            <!-- style="grid-row:3/span 2;grid-column:2/span 3;z-index:2;align-self:start;" -->
             <div id="bioitem4">
                 wrapped in a warm fog, yearning vocals float through waves of synth and heartbeats of bass, conjuring a world equally intimate and organic.
             </div>
-            <!-- style="grid-row:5;grid-column:1/span 2;font-size:16px;align-self:start;" -->
             <div id="bioitem5">
                 when miranda grew up, she wanted to be a tree. the only child of a landscape painter, the forest felt like kin. on a steamy summer afternoon at her dad’s blue ridge cabin, she met the old man of the woods.
             </div>
-            <!-- style="grid-row:5;grid-column:3/span 3;z-index:2;text-align:right;align-self:end;" -->
             <div id="bioitem6">
                 for half a decade, miranda had been hoarding dark, introspective songs. that synthesis was mirrored in the mushroom before her - that alchemy of shit into sustenance. under the old man’s guise, she was free to unfurl.
             </div>
-            <!-- style="grid-row:5/span 2;grid-column:4/span 2;z-index:1;justify-self:start;" -->
-            <div id="bioitem7">
-                <img src="img/moss.JPG" alt="" style="opacity: 70%;">
+            <div id="bioitem7" class="content">
+                <!-- <img src="img/moss.JPG" alt="" style="opacity: 70%;"> -->
+
+                <div class="content-overlay"></div>
+                <img class="content-image" src="img/moss2.JPG" alt=""/>
+                <div class="content-details"></div>
             </div>
-            <!-- style="grid-row:6;grid-column:1/span 5;z-index:2;align-self:end;font-size:14px;" -->
             <div id="bioitem8">
                 dissolve is old man of the woods’ debut ep, made in miranda’s bedroom during a month of winter rain and bad bout of bronchitis. everything clouded and waterlogged, the boundary between environment and self began to fade. she found comfort in letting herself dissolve, and hopes you will too.
             </div>
