Add water hover overlay to dissolve cover

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div id="bioitem2" class="content">
                 <!-- <img src="img/creek-portrait.JPG" alt="" style="opacity: 85%;"> -->
 
-                <div class="content-overlay"></div>
+                <div class="content-overlay-glitter"></div>
                 <img class="content-image" src="img/creek-portrait.JPG" alt=""/>
                 <div class="content-details"></div>
             </div>
@@ -92,7 +92,7 @@
                     <img src="img/glitter.gif" alt="" class="sparkle">
                 </div> -->
 
-                <div class="content-overlay"></div>
+                <div class="content-overlay-glitter"></div>
                 <img class="content-image" src="img/mountain-rain.JPG" alt=""/>
                 <div class="content-details"></div>
             </div>
@@ -108,7 +108,7 @@
             <div id="bioitem7" class="content">
                 <!-- <img src="img/moss.JPG" alt="" style="opacity: 70%;"> -->
 
-                <div class="content-overlay"></div>
+                <div class="content-overlay-glitter"></div>
                 <img class="content-image" src="img/moss2.JPG" alt=""/>
                 <div class="content-details"></div>
             </div>
@@ -119,15 +119,21 @@
 
 
         <section class="feature">
-            <div id="featureitem1">
-                <img src="img/dissolve-cover.jpg" alt="">
+            <div id="featureitem1" class="content">
+                <!-- <img src="img/dissolve-cover.jpg" alt=""> -->
+
+                <div class="content-overlay-water"></div>
+                <img class="content-image" src="img/dissolve-cover.jpg" alt="album cover"/>
+                <div class="content-details"></div>
             </div>
             <div id="featureitem2">
                 <div>
                     dissolve is old man of the woods’ debut ep, made in miranda’s bedroom during a month of winter rain and bad bout of bronchitis. everything clouded and waterlogged, the boundary between environment and self began to fade. she found comfort in letting herself dissolve, and hopes you will too.
                 </div>
                 <div style="padding-top: 10px;">
-                    <a href="https://open.spotify.com/album/6CozJEw2e1DgbHjY5IEesu?si=0NqXv8UUTUWQLcJoDgZnKg#login" target="_blank">listen on spotify</a>
+                    <a href="https://open.spotify.com/album/6CozJEw2e1DgbHjY5IEesu?si=0NqXv8UUTUWQLcJoDgZnKg" target="_blank">spotify</a> |
+                    <a href="https://music.apple.com/us/album/dissolve-ep/1530122629" target="_blank">apple</a> |
+                    <a href="https://oldmanmiranda.bandcamp.com/album/dissolve" target="_blank">bandcamp</a>
                 </div>
             </div>
             <div id="featureitem3">
