Add google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <script src="https://kit.fontawesome.com/673bbc70e7.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPZHHQKLET"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-NPZHHQKLET');
+        </script>
     </head>
 
     <body>
