--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
         <section class="title">
             <ul class="social-list">
                 <li class="social-list__item">
+                    <a class="social-list__link" href="https://totallyrealrecords.limitedrun.com/products/689413-old-man-of-the-woods-dissolve-ep" target="_blank">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
                     <a class="social-list__link" href="https://www.instagram.com/old.man.of.the.woods" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://twitter.com/old_man_miranda" target="_blank">
+                    <a class="social-list__link" href="https://twitter.com/o_m_w_" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
