Added wander video to site

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
             </div>
         </section>
 
+        <iframe class="footer-video" src="https://www.youtube.com/embed/P1G6qwekKA4" frameborder="0" allowfullscreen></iframe>
+
         <section class="footer">
             <div class="footer-feature">
                 <div id="featureitem1" class="content">
