Compressed gifs to be smaller

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <div id="linkitem3" class="content">
-                <img src="img/moon_circle.gif" alt="" class="link-img">
+                <img src="img/moon_circle_smaller.gif" alt="" class="link-img">
             </div>
 
             <div id="linkitem2" class="content">
