Gave links more space; fixed mobile padding

--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
 
         <section class="links">
             <div id="linkitem1" class="content">
-                <a href="https://oldmanmiranda.bandcamp.com" target="_blank">bandcamp</a><br>
-                <a href="https://open.spotify.com/artist/0t34b9Zwp6LKji8CbVG9oB" target="_blank">spotify</a><br>
-                <a href="https://music.apple.com/us/artist/old-man-of-the-woods/1530121646" target="_blank">apple</a><br>
-                <a href="https://music.amazon.com/artists/B01HL5P8HQ/old-man-of-the-woods?marketplaceId=ATVPDKIKX0DER&musicTerritory=US" target="_blank">amazon</a><br>
-                <a href="https://deezer.page.link/KvW7mj2NiT8PQLNy7" target="_blank">deezer</a><br>
-                <a href="https://soundcloud.com/old-man-of-the-woods" target="_blank">soundcloud</a><br>
+                <div class="link-column">
+                    <div><a href="https://oldmanmiranda.bandcamp.com" target="_blank">bandcamp</a></div>
+                    <div><a href="https://open.spotify.com/artist/0t34b9Zwp6LKji8CbVG9oB" target="_blank">spotify</a></div>
+                    <div><a href="https://music.apple.com/us/artist/old-man-of-the-woods/1530121646" target="_blank">apple</a></div>
+                    <div><a href="https://music.amazon.com/artists/B01HL5P8HQ/old-man-of-the-woods?marketplaceId=ATVPDKIKX0DER&musicTerritory=US" target="_blank">amazon</a></div>
+                    <div><a href="https://deezer.page.link/KvW7mj2NiT8PQLNy7" target="_blank">deezer</a></div>
+                    <div><a href="https://soundcloud.com/old-man-of-the-woods" target="_blank">soundcloud</a></div>
+                </div>
             </div>
 
             <div id="linkitem3" class="content">
@@ -114,11 +116,13 @@
             </div>
 
             <div id="linkitem2" class="content">
-                <a href="https://www.instagram.com/old.man.of.the.woods" target="_blank">instagram</a><br>
-                <a href="https://twitter.com/o_m_w_" target="_blank">twitter</a><br>
-                <a href="https://www.tiktok.com/@oldmanofthewoods" target="_blank">tiktok</a><br>
-                <a href="https://www.youtube.com/channel/UCAO0O0GR5XiGjNWQDpuE8AQ" target="_blank">youtube</a><br>
-                <a href="http://riotactmedia.com/roster/old-man-of-the-woods" target="_blank">bio/press</a><br>
+                <div class="link-column">
+                    <div><a href="https://www.instagram.com/old.man.of.the.woods" target="_blank">instagram</a></div>
+                    <div><a href="https://twitter.com/o_m_w_" target="_blank">twitter</a></div>
+                    <div><a href="https://www.tiktok.com/@oldmanofthewoods" target="_blank">tiktok</a></div>
+                    <div><a href="https://www.youtube.com/channel/UCAO0O0GR5XiGjNWQDpuE8AQ" target="_blank">youtube</a></div>
+                    <div><a href="http://riotactmedia.com/roster/old-man-of-the-woods" target="_blank">bio/epk</a></div>
+                </div>
             </div>
         </section>
 
