Change release date to now

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="pulse">
                         <img src="img/votives_wonky.png" alt="" class="album-title-img">
                     </div>
-                    <a href="https://oldmanmiranda.bandcamp.com/album/votives" target="_blank">out oct 15 !</a>
+                    <a href="https://oldmanmiranda.bandcamp.com/album/votives" target="_blank">out now !</a>
                     <!-- <h3 class="title-text">out oct 15</h3> -->
                 </div>
               <!--   <div id="header-text-promo" class="fading">
