add upcoming show links

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
             </div>
         </section>
 
+        <section class="mini-bio">
+            <div class="content">
+                old man of the woods is the ethereal electro pop project of seattle-based artist miranda elliott. swirling harmonies, pulsing bass, and glimmering synths forge an eerie realm to gyrate and contemplate ~
+            </div>
+        </section>
+
+
+
+
         <section class="links">
             <div id="linkitem1" class="content">
                 <div class="link-column">
@@ -127,7 +136,15 @@
         </section>
 
 
-
+        <section class="links">
+            <div id="linkitem3" class="content">
+                <div class="link-column">
+                    <div>shows!</div>
+                    <div>june 8 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/buzzbtns-smooth-kiwi-old-man-of-the-woods/" target="_blank">chop suey w/ buzzbtns & smooth kiwi</a></div>
+                    <div>june 21 - <a style="color:#efc39f;" href="https://do206.com/events/2023/6/21/crowkid-brainard-old-man-of-the-woods-tickets" target="_blank">conor byrne w/ crow kid & brainard</a></div>
+                </div>
+            </div>
+        </section>
 
         <section class="press">
             <div class="content">
@@ -183,20 +200,6 @@
             </div>
         </section>
 
-          <section class="mini-bio">
-            <div class="content">
-                old man of the woods is the ethereal electro pop project of seattle-based songwriter and producer miranda elliott. when elliott grew up, she wanted to be a tree. the only child of a landscape painter, the forest felt like kin. old man of the woods is born of that mentality. describing her creative process as the alchemy of shit into sustenance, elliott named the project after a dark, scruffy mushroom that survives by the same creed. created in her home studio, her 2020 debut ep <i>dissolve</i> “blurs the line between the personal and the natural world, conjuring a vivid and sometimes eerie soundscape as damp and rich as the woodland floor” (various small flames). her 2021 debut album <i>votives</i> invites us deeper within. flickering between devotion and resentment, affection and isolation, faith and doubt, elliott constructs a sonic labyrinth guided by a dream she had after writing the title track, that our minds are little churches filled with votives burning for everyone we’ve loved. “each pop nugget is like a different landscape painting, textural and intriguing, with deeper meaning hidden behind the lush, beguiling surfaces” (foxy digitalis).
-<!--                old man of the woods is the ethereal electro pop project of seattle-based songwriter and producer miranda elliott.-->
-<!--                <br><br>-->
-<!--                when elliott grew up, she wanted to be a tree. the only child of a landscape painter, the forest felt like kin. born and raised in richmond, virginia, she spent her youth exploring the james river, blue ridge mountains, and her own backyard, drawn to the mystery of dense green and deep blue. it allowed her to fill in the blanks, to invent the strange creature that must have rustled those leaves, to construct a constant fantasy within reality.-->
-<!--                <br><br>-->
-<!--                elliott would bring that embellished worldview to everything. she photographed vacant factories, calling them urban cathedrals. she saw crumbling walls and peeling paint as abstract compositions of texture and line. she viewed the world as a perpetual collage that could be rearranged and reimagined.-->
-<!--                <br><br>-->
-<!--                old man of the woods is born of that mentality. elliott describes her creative process as the alchemy of shit into sustenance, naming the project after a dark, scruffy mushroom that survives by the same creed. created in her home studio in richmond, her 2020 debut ep <i>dissolve</i> “blurs the line between the personal and the natural world, conjuring a vivid and sometimes eerie soundscape as damp and rich as the woodland floor” (various small flames).-->
-<!--                <br><br>-->
-<!--                old man of the woods’ 2021 debut album <i>votives</i> invites us deeper into elliott’s imagination. flickering between devotion and resentment, affection and isolation, faith and doubt, elliott creates a sonic labyrinth guided by a dream she had after writing the title track, that our minds are little churches filled with votives burning for everyone we’ve loved. the first three form a triptych of sorts – beginning with ‘garden’, an ambient hum evolving with repetition from a hesitant fascination to an unwavering trust, where the candle is lit; moving to ‘let me miss you’, a ukulele-strummed post-breakup plea that begs to feel nostalgic instead of hurt, where it still burns for a memory; then to ‘votives’, a danceable bass-driven reminder to let go of the memories that only weigh us down, where we blow it out. as the album progresses, these themes repeat, morph, and steep. we grieve our lost loves and lost selves, slowly growing stronger and more assured, with honest moments of weakness along the way. written from 2018 to 2021, <i>votives</i> is a journey through what it means to love and be human and make mistakes and keep going. wrapped in a warm fog of dreamy harmonies and swirling synths, it reminds us that love is magic, release is vital, and movement is forever.-->
-            </div>
-        </section>
 
       <!--   <section class="bio">
             <div id="biopromoimage">
