update upcoming shows

--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@
             </div>
         </section>
 
-
-
-
         <section class="links">
             <div id="linkitem1" class="content">
                 <div class="link-column">
@@ -131,22 +128,25 @@
                     <div><a href="https://www.tiktok.com/@oldmanofthewoods" target="_blank">tiktok</a></div>
                     <div><a href="https://www.youtube.com/channel/UCAO0O0GR5XiGjNWQDpuE8AQ" target="_blank">youtube</a></div>
                     <div><a href="http://riotactmedia.com/roster/old-man-of-the-woods" target="_blank">bio/epk</a></div>
+                    <div><a href="https://www.bandsintown.com/a/11871622-old-man-of-the-woods" target="_blank">bandsintown</a></div>
                 </div>
             </div>
         </section>
 
-
-        <section class="links">
+        <section class="links shows">
             <div id="linkitem3" class="content">
                 <div class="link-column">
-                    <div>shows!</div>
-                    <div>june 8 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/buzzbtns-smooth-kiwi-old-man-of-the-woods/" target="_blank">chop suey w/ buzzbtns & smooth kiwi</a></div>
+                    <div class="section-title">join me...</div>
+<!--                    <div>june 8 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/buzzbtns-smooth-kiwi-old-man-of-the-woods/" target="_blank">chop suey w/ buzzbtns & smooth kiwi</a></div>-->
                     <div>june 21 - <a style="color:#efc39f;" href="https://do206.com/events/2023/6/21/crowkid-brainard-old-man-of-the-woods-tickets" target="_blank">conor byrne w/ crow kid & brainard</a></div>
                 </div>
             </div>
         </section>
 
         <section class="press">
+            <div class="section-title">
+                the ppl are saying...
+            </div>
             <div class="content">
                 "a pleasant, dreamy synth-pop journey with delicate harmonies that feel like they’re striking the listener from all angles" - <a href="https://www.stereogum.com/2156944/old-man-of-the-woods-votives/music/" target="_blank">stereogum</a>
             </div>
