Update show listings

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div id="linkitem3" class="content">
                 <div class="link-column">
                     <div class="section-title">join us...</div>
-                    <div>june 21 - <a style="color:#efc39f;" href="https://www.bandsintown.com/e/104521622-old-man-of-the-woods-at-conor-byrne-pub" target="_blank">conor byrne w/ crow kid & brainard</a></div>
+                    <div>nov 16 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/swamp-wife-ghost-fetish-the-stalk/" target="_blank">chop suey w/ ghost fetish & swamp wife</a></div>
                 </div>
             </div>
         </section>
