--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
         <section class="links shows">
             <div id="linkitem3" class="content">
                 <div class="link-column">
-                    <div class="section-title">join us...</div>
-                    <div>nov 16 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/swamp-wife-ghost-fetish-the-stalk/" target="_blank">chop suey w/ ghost fetish & swamp wife</a></div>
+                    <div class="section-title"><a href="https://www.bandsintown.com/a/11871622-old-man-of-the-woods" target="_blank">join us...</a></div>
+                    <!-- <div class="section-title">join us...</div>
+                    <div>nov 16 - <a style="color:#efc39f;" href="https://chopsuey.com/tm-event/swamp-wife-ghost-fetish-the-stalk/" target="_blank">chop suey w/ ghost fetish & swamp wife</a></div> -->
                 </div>
             </div>
         </section>
