Update favicon & links

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/index.js"></script>
-        <!-- todo: setup new google analytics tag -->
-<!--        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPZHHQKLET"></script>-->
-<!--        <script>-->
-<!--          window.dataLayer = window.dataLayer || [];-->
-<!--          function gtag(){dataLayer.push(arguments);}-->
-<!--          gtag('js', new Date());-->
-<!--          gtag('config', 'G-NPZHHQKLET');-->
-<!--        </script>-->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FYRR6F2R11"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-FYRR6F2R11');
+        </script>
     </head>
 
     <body>
@@ -39,7 +39,7 @@
             <div class="bio-text">
                 A dark electro duo creeping forth from the shadowed corners of Seattle, brewing a compelling cauldron of cultronica. Sweeping drones and rippling bass entwine with haunting harmonies as they delve into psychic depths, probing dynamics of symbiosis, identity, and control.
                 <br><br>
-                An act of surrender itself, their dark communion marks a fusion of two hyper-independent artists into a mutual creative body. Joey Frostad, a producer notorious in the Northwest rave circuit for irreverent twilit DJ marathons as <a href=https://soundcloud.com/wut-heart" target="_blank">wut <3</a>, composes and manipulates the duo’s melodic and rhythmic core, deftly plucking a magnetizing web of sound. Miranda Elliott, a singer-songwriter beloved for her solo synth-pop project <a href="https://oldmanofthewoods.rocks/" target="_blank">Old Man of the Woods</a>, glides along its strands with arachnid finesse, crooning poetic incantations coated in hypnotic repetition, whispered confession, and celestial chorus. Each singular, seamless live set becomes a ritual of exchange and exploration, luring listeners deeper into themselves and the collective, creating a space for catharsis and contemplation.
+                An act of surrender itself, their communion marks a fusion of two hyper-independent artists into a mutual creative body. Joey Frostad, a producer notorious in the Northwest rave circuit for irreverent twilit DJ marathons as <a href="https://soundcloud.com/wut-heart" target="_blank">wut <3</a>, composes and manipulates the duo’s melodic and rhythmic core, deftly plucking a magnetizing web of sound. Miranda Elliott, a singer-songwriter beloved for her solo synth-pop project <a href="https://oldmanofthewoods.rocks/" target="_blank">Old Man of the Woods</a>, glides along its strands with arachnid finesse, crooning poetic incantations coated in hypnotic repetition, whispered confession, and celestial chorus. Each singular, seamless live set becomes a ritual of exchange and exploration, luring listeners deeper into themselves and the collective, creating a space for catharsis and contemplation.
             </div>
         </section>
 
@@ -77,6 +77,8 @@
                     got my venus in virgo<br>
                     i’ll plot how you burn
                 </div>
+                <br><br>
+                <a href="https://distrokid.com/hyperfollow/thestalk/venus-in-virgo-2" target="_blank" style="color:#f47696;">pre-save</a>
             </div>
         </section>
 
