Use higher res favicon; update bio wording

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>the stalk</title>
-        <link rel="icon" href="img/stalk/favicon.ico" type="image/x-icon">
+        <link rel="icon" type="image/x-icon" href="img/stalk/favicon.ico">
+        <link rel="icon" type="image/png" href="img/stalk/favicon-96x96.png" sizes="96x96">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <script src="https://kit.fontawesome.com/673bbc70e7.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
@@ -37,7 +38,7 @@
                 <img src="img/stalk/bunker_portrait.jpg">
             </div>
             <div class="bio-text">
-                A dark electro duo creeping forth from the shadowed corners of Seattle, brewing a compelling cauldron of cultronica. Sweeping drones and rippling bass entwine with haunting harmonies as they delve into psychic depths, probing dynamics of symbiosis, identity, and control.
+                A dark electro duo creeping forth from the shadowed corners of Seattle, <i>the stalk</i> brews a compelling cauldron of cultronica. Sweeping drones and rippling bass entwine with haunting harmonies as they delve into psychic depths, probing dynamics of symbiosis, identity, and control.
                 <br><br>
                 An act of surrender itself, their communion marks a fusion of two hyper-independent artists into a mutual creative body. Joey Frostad, a producer notorious in the Northwest rave circuit for irreverent twilit DJ marathons as <a href="https://soundcloud.com/wut-heart" target="_blank">wut <3</a>, composes and manipulates the duo’s melodic and rhythmic core, deftly plucking a magnetizing web of sound. Miranda Elliott, a singer-songwriter beloved for her solo synth-pop project <a href="https://oldmanofthewoods.rocks/" target="_blank">Old Man of the Woods</a>, glides along its strands with arachnid finesse, crooning poetic incantations coated in hypnotic repetition, whispered confession, and celestial chorus. Each singular, seamless live set becomes a ritual of exchange and exploration, luring listeners deeper into themselves and the collective, creating a space for catharsis and contemplation.
             </div>
@@ -53,7 +54,7 @@
                 <img src="img/stalk/bies_square.jpg">
             </div>
             <div class="album-text">
-                Having already captivated audiences from the Pacific Northwest to Germany, <i>the stalk</i> is poised to release their debut album <i>parasite</i> this autumn, written while artists in residence with Berlin-based Culterim Gallery last September at a lake-side abandoned sanatorium in Biesenthal, Germany. Steeped in its eerie atmosphere of serenity and secrecy, the LP has been described as a "verbal Rorschach test”, offering an expansive canvas for listeners to explore their shadow selves.
+                Having already captivated audiences from the Pacific Northwest to Germany, <i>the stalk</i> is poised to release their debut album <i>parasite</i> this autumn, written while artists in residence with Berlin-based <a href="https://www.instagram.com/culterimgallery" target="_blank">Culterim Gallery</a> last September at a lake-side abandoned sanatorium in Biesenthal, Germany. Steeped in its eerie atmosphere of serenity and secrecy, the LP has been described as a "verbal Rorschach test”, offering an expansive canvas for listeners to explore their shadow selves.
             </div>
         </section>
 
@@ -67,9 +68,9 @@
                 <img src="img/stalk/single_venus_in_virgo.jpg">
             </div>
             <div class="single-text">
-                Until then, <i>the stalk</i> has a feast of delectable appetizers to share. The first is <i>venus in virgo</i>, served May 15 via Totally Real Records (NY).
+                Until then, <i>the stalk</i> has a feast of delectable appetizers to share. The first is <i>venus in virgo</i>, served May 15 via <a href="https://www.instagram.com/totallyrealrecs" target="_blank">Totally Real Records</a> (NY).
                 <br><br>
-                It’s the aftermath of deceit, the infection of distrust, the festering fury finally bubbling over, scorching everything in sight. The disillusionment of the good girl. Empowered, enraged, exacting.
+                It’s the aftermath of deceit, the infection of distrust, the festering fury finally bubbling over, scorching everything in sight. The disillusionment of the good girl, growling over thumping bass. Empowered, enraged, exacting.
                 <br><br>
                 <div class="quote">
                     didn’t think i’d be hateful<br>
