added new links

--- a/index.html
+++ b/index.html
@@ -122,13 +122,15 @@
             </div>
             <div class="link-grid center">
                 <div class="link-column">
-                    <div><a href="https://www.instagram.com/the.st.alk" target="_blank">instagram</a></div>
                     <div><a href="https://the-stalk.bandcamp.com/" target="_blank">bandcamp</a></div>
-                    <div><a href="https://open.spotify.com/artist/52gMRQPPmwZcuzi9MlyKKk?si=k821pczHTBaue7LyISC07g" target="_blank">spotify</a></div>
+                    <div><a href="https://www.instagram.com/the.st.alk" target="_blank">instagram</a></div>
+                    <div><a href="https://www.tiktok.com/@the.st.alk" target="_blank">tiktok</a></div>
+                    <div><a href="https://music.youtube.com/channel/UC4fFuDbP8l-dIu8ZDT-32rA" target="_blank">youtube</a></div>
                 </div>
                 <div class="link-column">
+                    <div><a href="https://open.spotify.com/artist/52gMRQPPmwZcuzi9MlyKKk?si=k821pczHTBaue7LyISC07g" target="_blank">spotify</a></div>
                     <div><a href="https://music.apple.com/us/artist/the-stalk/1721962374" target="_blank">apple</a></div>
-                    <div><a href="https://music.youtube.com/channel/UC4fFuDbP8l-dIu8ZDT-32rA" target="_blank">youtube</a></div>
+                    <div><a href="https://soundcloud.com/the-st-alk" target="_blank">soundcloud</a></div>
                     <div><a href="mailto:the.stalk.band@gmail.com" target="_blank">contact</a></div>
                 </div>
             </div>
